<resources>
    <string name="app_name">YepKart Vendor</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_task">Task</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_payment">Payment History</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_about">About Us</string>
    <string name="menu_tour">Take a Tour</string>

    <string name="title_earnings">EARNINGS (THIS WEEK)</string>
    <string name="title_incoming_jobs">INCOMING JOBS</string>
    <string name="title_apply_jobs">APPLY FOR JOBS</string>
    <string name="title_last_week">LAST WEEK</string>
    <string name="title_current_week">THIS WEEK</string>
    <string name="title_add_money">ADD MONEY</string>
    <string name="title_gift_voucher">VOUCHER</string>
    <string name="title_send_money">SEND MONEY</string>
    <string name="title_change_account">CHANGE\nACCOUNT</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_jobs_done">JOBS DONE</string>
    <string name="title_jobs_upcoming">UPCOMING JOBS</string>
    <string name="title_revenue_earned">REVENUE EARNED</string>
    <string name="title_received_amount">RECEIVED AMOUNT</string>
    <string name="title_pending_amount">PENDING AMOUNT</string>
    <string name="title_call_now">CALL NOW</string>
    <string name="title_apply_now">APPLY NOW</string>
    <string name="title_finish_now">FINISH JOB</string>
    <string name="title_view_details">VIEW DETAILS</string>
    <string name="title_view_all">VIEW ALL</string>
    <string name="title_refer">REFER A FRIEND</string>

    <string name="heading_transaction_history">Transaction History</string>
    <string name="heading_transaction_statement">Transaction Statement</string>
</resources>