<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/menu_payment"/>
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_wallet"/>
        <item
            android:id="@+id/nav_legal"
            android:icon="@drawable/ic_legal"
            android:title="@string/menu_legal"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/ic_tour"
            android:title="@string/menu_tour"/>
    </group>
</menu>